@@ -19,6 +19,7 @@ package org.apache.cassandra.schema;
 
 import java.util.Map;
 
+import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Objects;
 
 /**
@@ -27,6 +28,14 @@ import com.google.common.base.Objects;
 public final class KeyspaceParams
 {
     public static final boolean DEFAULT_DURABLE_WRITES = true;
+
+    /**
+     * This determines durable writes for the {@link org.apache.cassandra.db.SystemKeyspace#NAME}
+     * and {@link SchemaKeyspace#NAME} keyspaces, the only reason it is not final is for commitlog
+     * unit tests. It should only be changed for testing purposes.
+     */
+    @VisibleForTesting
+    public static boolean DEFAULT_LOCAL_DURABLE_WRITES = true;
 
     public enum Option
     {
@@ -56,7 +65,7 @@ public final class KeyspaceParams
 
     public static KeyspaceParams local()
     {
-        return new KeyspaceParams(true, ReplicationParams.local());
+        return new KeyspaceParams(DEFAULT_LOCAL_DURABLE_WRITES, ReplicationParams.local());
     }
 
     public static KeyspaceParams simple(int replicationFactor)
